[gd_scene load_steps=19 format=3 uid="uid://e6niyj6oy3e3"]

[ext_resource type="Texture2D" uid="uid://cgx5celc7w0wu" path="res://assets/black_screen.png" id="1_2ktqw"]
[ext_resource type="Script" path="res://counting_sheep.gd" id="1_5jdcl"]
[ext_resource type="Texture2D" uid="uid://cdbektym4wupo" path="res://assets/white_phone_screen.png" id="2_3rcgs"]
[ext_resource type="Texture2D" uid="uid://5fmqols6qf7q" path="res://assets/forest.png" id="3_tkne7"]
[ext_resource type="PackedScene" uid="uid://dlhfpmmptwouv" path="res://sheep.tscn" id="5_lsdoy"]
[ext_resource type="Texture2D" uid="uid://c8gckkevn8gc0" path="res://assets/sheep.png" id="6_rhrr6"]
[ext_resource type="Texture2D" uid="uid://ds58d26trm7fl" path="res://assets/phone_frame.png" id="7_bnyks"]
[ext_resource type="Script" path="res://tap_controls.gd" id="8_lo560"]
[ext_resource type="Texture2D" uid="uid://x5cu6x7nau6o" path="res://assets/tap_button.png" id="9_ulqaj"]
[ext_resource type="Texture2D" uid="uid://b27at6m2hp1qu" path="res://assets/battery.png" id="10_sx6l5"]
[ext_resource type="Texture2D" uid="uid://erdcdspvyjc2" path="res://assets/battery_bar.png" id="11_77oj5"]
[ext_resource type="Script" path="res://battery_life.gd" id="12_vu0mf"]
[ext_resource type="Texture2D" uid="uid://4wm4t204l4xo" path="res://assets/clicked.png" id="13_2315f"]
[ext_resource type="Texture2D" uid="uid://3kcaqx4t3rdn" path="res://assets/service_bar.png" id="13_o6ba8"]
[ext_resource type="Texture2D" uid="uid://buv3rbn26aoj6" path="res://assets/tap_button_2.png" id="14_xtgwr"]
[ext_resource type="PackedScene" uid="uid://dl6go1tewgek7" path="res://pause.tscn" id="16_umlrr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vu3mm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_2315f")
}],
"loop": true,
"name": &"clicked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_xtgwr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ulqaj")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5tjip"]
radius = 100.975

[node name="counting_sheep" type="Node2D"]
script = ExtResource("1_5jdcl")

[node name="black_screen" type="Sprite2D" parent="."]
position = Vector2(947, 537)
scale = Vector2(1.04688, 1.06296)
texture = ExtResource("1_2ktqw")
metadata/_edit_lock_ = true

[node name="white_phone_screen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_3rcgs")
metadata/_edit_lock_ = true

[node name="forest" type="Sprite2D" parent="."]
position = Vector2(618, 546)
scale = Vector2(1.07685, 1.07685)
texture = ExtResource("3_tkne7")
metadata/_edit_lock_ = true

[node name="spawn" type="Marker2D" parent="."]
position = Vector2(500, 950)

[node name="right_spawn" type="Marker2D" parent="."]
position = Vector2(1412, 965)

[node name="spawn_everywhere" type="Marker2D" parent="."]
position = Vector2(577, 29)

[node name="sheep" parent="." instance=ExtResource("5_lsdoy")]
visible = false
position = Vector2(546, 958)

[node name="score_total" type="Label" parent="."]
offset_left = 617.0
offset_top = 36.0
offset_right = 936.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="r_sheep_1" type="Sprite2D" parent="."]
position = Vector2(943, 239)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_rhrr6")

[node name="r_sheep_2" type="Sprite2D" parent="."]
position = Vector2(771, 678)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_rhrr6")

[node name="r_sheep_3" type="Sprite2D" parent="."]
position = Vector2(1130, 668)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_rhrr6")

[node name="big_sheep" type="Sprite2D" parent="."]
position = Vector2(55.0001, 546)
scale = Vector2(2, 2)
texture = ExtResource("6_rhrr6")
flip_h = true
flip_v = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="frame" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 540)
texture = ExtResource("7_bnyks")

[node name="right_black_screen2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(2325, 568.5)
scale = Vector2(1, 1.16019)
texture = ExtResource("1_2ktqw")

[node name="left_black_screen2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-405, 516)
scale = Vector2(1, 1.18333)
texture = ExtResource("1_2ktqw")

[node name="battery_group" type="Node" parent="."]

[node name="battery" type="Sprite2D" parent="battery_group"]
position = Vector2(1268, 63)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_sx6l5")

[node name="battery_life" type="TextureProgressBar" parent="battery_group/battery"]
offset_left = -200.0
offset_top = -101.0
offset_right = 200.0
offset_bottom = 99.0
max_value = 15.0
value = 15.0
texture_progress = ExtResource("11_77oj5")
tint_under = Color(1, 1, 1, 0)
tint_over = Color(1, 1, 1, 0)
script = ExtResource("12_vu0mf")

[node name="service_bar" type="Sprite2D" parent="battery_group"]
position = Vector2(1172, 64)
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_o6ba8")

[node name="5G" type="Label" parent="battery_group"]
offset_left = 1194.0
offset_top = 39.0
offset_right = 1233.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 30
text = "5G"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tap_controls" type="CanvasLayer" parent="."]
offset = Vector2(1150, 800)
scale = Vector2(0.8, 0.8)
transform = Transform2D(0.8, 0, 0, 0.8, 1150, 800)
script = ExtResource("8_lo560")

[node name="button" type="AnimatedSprite2D" parent="tap_controls"]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_vu3mm")
animation = &"clicked"

[node name="detection" type="Area2D" parent="tap_controls/button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tap_controls/button/detection"]
shape = SubResource("CircleShape2D_5tjip")

[node name="text" type="Label" parent="tap_controls"]
offset_left = -83.0
offset_top = -60.0
offset_right = 85.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 40
text = "Sample"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pause" parent="." instance=ExtResource("16_umlrr")]

[connection signal="mouse_entered" from="tap_controls/button/detection" to="tap_controls" method="_on_detection_mouse_entered" flags=18]
[connection signal="mouse_exited" from="tap_controls/button/detection" to="tap_controls" method="_on_detection_mouse_exited" flags=18]
